Updated openapi.json and shows.js
